--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,27 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")
+
+    // Gson
+    implementation 'com.google.code.gson:gson:2.9.0'
+
+    // 레트로핏
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    implementation "com.squareup.moshi:moshi:1.9.2"
+
+    implementation("com.squareup.okhttp3:okhttp:4.9.2")
+    implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.9.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.8.0'
+
+    // MVVM 패턴 적용 시 사용
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0-beta01'
+    implementation 'androidx.activity:activity-ktx:1.4.0'
+    implementation 'androidx.fragment:fragment-ktx:1.4.1'
 }
