--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext {
+        hiltVersion = '2.40.5'
+        roomVersion = '2.4.2'
+        retrofitVersion = '2.9.0'
+        okHttpVersion = '4.9.2'
+        lifecycleVersion = '2.5.0-beta01'
+        gsonVersion = '2.9.0'
+        navVersion = '2.4.2'
+    }
+
+    dependencies {
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.40.5'
+        classpath 'com.google.gms:google-services:4.3.10'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navVersion"
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.1.3' apply false
     id 'com.android.library' version '7.1.3' apply false
